[package]
name = "aws-encryption-checker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AWS service encryption configuration checker"
license = "MIT"
repository = "https://github.com/yourusername/aws-encryption-checker"

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
aws-sdk-dynamodb = "0.34.0"
aws-sdk-efs = "0.34.0"
aws-sdk-sns = "0.34.0"
aws-sdk-sqs = "0.34.0"
aws-sdk-lambda = "0.34.0"
aws-sdk-cloudtrail = "0.34.0"
aws-sdk-elasticsearch = "0.34.0"
aws-sdk-redshift = "0.34.0"
aws-sdk-docdb = "0.34.0"
aws-sdk-neptune = "0.34.0"
aws-sdk-glacier = "0.34.0"

# Supporting libraries
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"