[package]
name = "aws-encryption-checker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "AWS service encryption configuration checker"
license = "MIT"
repository = "https://github.com/yourusername/aws-encryption-checker"

[dependencies]
# AWS SDK dependencies - all using version 1.x for compatibility
aws-config = "1.5.0"
aws-sdk-s3 = "1.36.0"
aws-sdk-dynamodb = "1.36.0"
aws-sdk-efs = "1.36.0"
aws-sdk-sns = "1.36.0"
aws-sdk-sqs = "1.36.0"
aws-sdk-lambda = "1.36.0"
aws-sdk-cloudtrail = "1.36.0"
aws-sdk-elasticsearch = "1.36.0"
aws-sdk-redshift = "1.36.0"
aws-sdk-docdb = "1.36.0"
aws-sdk-neptune = "1.36.0"
aws-sdk-glacier = "1.36.0"
aws-sdk-rds = "1.36.0"
aws-sdk-kms = "1.36.0"
aws-sdk-ebs = "1.36.0"
aws-sdk-ec2 = "1.36.0"
aws-sdk-secretsmanager = "1.36.0"
aws-sdk-backup = "1.36.0"
aws-sdk-workspaces = "1.36.0"
aws-sdk-elasticache = "1.36.0"

# Supporting libraries
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.32", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"