[package]
name = "aws-encryption-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
indicatif = "0.17"
aws-config = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-rds = "1.0"
aws-sdk-kms = "1.0"
aws-sdk-ebs = "1.0"